# Breast-Cancer-Risk-Assessment

./: .gitignore  README.md  setup.sh
backend/: db.sqlite3  env.example  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/inference/: explainer.py  predictor.py  schema.json
backend/inference/model/: model_pipeline.pkl
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ConfirmForm.tsx  ConsentDialog.tsx  ContributionChart.tsx  Disclaimer.tsx  MeasurementForm.tsx  ResultCard.tsx  Shell.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/lib/: api.ts  featureHelp.ts  format.ts
frontend/src/pages/: About.tsx  Confirm.tsx  Home.tsx
ml/: train_model.py
ml/model_out/: version.txt
